--- a/magnifier.html
+++ b/magnifier.html
@@ -8,7 +8,7 @@
         
         <style type="text/css">
         *{margin: 0;padding: 0;}
-          #warpper{margin: 100px 0 0 200px;position: relative;height: 450px;width: 450px;}
+          #warpper{margin: 100px 0 100px 200px;position: relative;height: 450px;width: 450px;}
           .big{position: absolute;top: 0;right: -501px;border:1px solid black;height: 498px;width: 498px;background: url(images/big.jpg) no-repeat;display: none;}
           .small{position: relative;height: 450px;width: 450px;border:1px solid black;}
           .small:hover{cursor: move;}
@@ -29,22 +29,24 @@
 <script type="text/javascript">
 var height=$('.red').height();
 var width=$('.red').width();
-var sHeight=$('.small').height();
-var sWidth=$('.small').width();
+var sHeight=$('.small').outerHeight();
+var sWidth=$('.small').outerWidth();
 var sTop=$('.small').offset().top;
 var sLeft=$('.small').offset().left;
 $(document).mousemove(function(e) {
-    var top=e.clientY+$(document).scrollTop()-height/2-sTop;
+    var scrollTop=$(document).scrollTop();
+    var scrollLeft=$(document).scrollLeft();
+    var top=e.clientY+scrollTop-height/2-sTop;
     var left=e.clientX-width/2-sLeft;
-   if(e.clientX>=sLeft&&e.clientX<=sLeft+sWidth&&e.clientY>=sTop&&e.clientY<=sTop+sHeight){
-        if(e.clientY-sTop<height/2){
+   if(e.clientX+scrollLeft>=sLeft&&e.clientX+scrollLeft<=sLeft+sWidth&&e.clientY+scrollTop>=sTop&&e.clientY+scrollTop<=sTop+sHeight){
+        if(e.clientY+scrollTop-sTop<height/2){
             top=0;
-        }else if(sHeight+sTop-e.clientY<height/2){
+        }else if(sHeight+sTop-e.clientY-scrollTop<height/2){
             top=sHeight-height;
         }
-        if(e.clientX-sLeft<width/2){
+        if(e.clientX+scrollLeft-sLeft<width/2){
             left=0;
-        }else if(sWidth+sLeft-e.clientX<width/2){
+        }else if(sWidth+sLeft-e.clientX-scrollLeft<width/2){
             left=sWidth-width;
         }
         $('.big').show();
