--- a/magnifier.html
+++ b/magnifier.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>WEBGOD</title>
+        <title>magnifier</title>
         
         <script src="jquery-1.11.3.js"></script>
         
