--- a/magnifier.html
+++ b/magnifier.html
@@ -56,8 +56,8 @@ $(document).mousemove(function(e) {
             left:left+'px'
         })
         $('.big').css({
-            backgroundPositionX:left/(sWidth-width)*100+'%',
-            backgroundPositionY:top/(sHeight-height)*100+'%'
+            backgroundPositionX:left/(sWidth-width)*100+1+'%',
+            backgroundPositionY:top/(sHeight-height)*100+1+'%'
         })
     }else{
         $('.red').hide();
